fix the immage not showing

--- a/src/App.css
+++ b/src/App.css
@@ -44,11 +44,16 @@
 
 .card .content {
   width: 100%;
-  height: 170%;
+  height: 100%;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
   cursor: pointer;
+}
+
+.card-content {
+  height: 250px;
+  width: 100%;
 }
 
 .align-center {
